background color 변경

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,9 @@ a:hover {
 p:has(> a > img) {
     align-self: center;
 }
+
+@media (prefers-color-scheme: dark) {
+    .markdown-body {
+        --color-canvas-default: #1E1F1E !important;
+    }
+}
