--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,49 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    --color-prettylights-syntax-comment: #6e7781 !important;
-    --color-prettylights-syntax-constant: #0550ae !important;
-    --color-prettylights-syntax-entity: #8250df !important;
-    --color-prettylights-syntax-storage-modifier-import: #24292f !important;
-    --color-prettylights-syntax-entity-tag: #116329 !important;
-    --color-prettylights-syntax-keyword: #cf222e !important;
-    --color-prettylights-syntax-string: #0a3069 !important;
-    --color-prettylights-syntax-variable: #953800 !important;
-    --color-prettylights-syntax-brackethighlighter-unmatched: #82071e !important;
-    --color-prettylights-syntax-invalid-illegal-text: #f6f8fa !important;
-    --color-prettylights-syntax-invalid-illegal-bg: #82071e !important;
-    --color-prettylights-syntax-carriage-return-text: #f6f8fa !important;
-    --color-prettylights-syntax-carriage-return-bg: #cf222e !important;
-    --color-prettylights-syntax-string-regexp: #116329 !important;
-    --color-prettylights-syntax-markup-list: #3b2300 !important;
-    --color-prettylights-syntax-markup-heading: #0550ae !important;
-    --color-prettylights-syntax-markup-italic: #24292f !important;
-    --color-prettylights-syntax-markup-bold: #24292f !important;
-    --color-prettylights-syntax-markup-deleted-text: #82071e !important;
-    --color-prettylights-syntax-markup-deleted-bg: #ffebe9 !important;
-    --color-prettylights-syntax-markup-inserted-text: #116329 !important;
-    --color-prettylights-syntax-markup-inserted-bg: #dafbe1 !important;
-    --color-prettylights-syntax-markup-changed-text: #953800 !important;
-    --color-prettylights-syntax-markup-changed-bg: #ffd8b5 !important;
-    --color-prettylights-syntax-markup-ignored-text: #eaeef2 !important;
-    --color-prettylights-syntax-markup-ignored-bg: #0550ae !important;
-    --color-prettylights-syntax-meta-diff-range: #8250df !important;
-    --color-prettylights-syntax-brackethighlighter-angle: #57606a !important;
-    --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f !important;
-    --color-prettylights-syntax-constant-other-reference-link: #0a3069 !important;
-    --color-fg-default: #24292f !important;
-    --color-fg-muted: #57606a !important;
-    --color-fg-subtle: #6e7781 !important;
-    --color-canvas-default: #fff !important;
-    --color-canvas-subtle: #f6f8fa !important;
-    --color-border-default: #d0d7de !important;
-    --color-border-muted: #d8dee4 !important;
-    --color-neutral-muted: rgba(175, 184, 193, .2) !important;
-    --color-accent-fg: #0969da !important;
-    --color-accent-emphasis: #0969da !important;
-    --color-attention-subtle: #fff8c5 !important;
-    --color-danger-fg: #cf222e !important
+@layer base {
+    html {
+        --color-prettylights-syntax-comment: #6e7781 !important;
+        --color-prettylights-syntax-constant: #0550ae !important;
+        --color-prettylights-syntax-entity: #8250df !important;
+        --color-prettylights-syntax-storage-modifier-import: #24292f !important;
+        --color-prettylights-syntax-entity-tag: #116329 !important;
+        --color-prettylights-syntax-keyword: #cf222e !important;
+        --color-prettylights-syntax-string: #0a3069 !important;
+        --color-prettylights-syntax-variable: #953800 !important;
+        --color-prettylights-syntax-brackethighlighter-unmatched: #82071e !important;
+        --color-prettylights-syntax-invalid-illegal-text: #f6f8fa !important;
+        --color-prettylights-syntax-invalid-illegal-bg: #82071e !important;
+        --color-prettylights-syntax-carriage-return-text: #f6f8fa !important;
+        --color-prettylights-syntax-carriage-return-bg: #cf222e !important;
+        --color-prettylights-syntax-string-regexp: #116329 !important;
+        --color-prettylights-syntax-markup-list: #3b2300 !important;
+        --color-prettylights-syntax-markup-heading: #0550ae !important;
+        --color-prettylights-syntax-markup-italic: #24292f !important;
+        --color-prettylights-syntax-markup-bold: #24292f !important;
+        --color-prettylights-syntax-markup-deleted-text: #82071e !important;
+        --color-prettylights-syntax-markup-deleted-bg: #ffebe9 !important;
+        --color-prettylights-syntax-markup-inserted-text: #116329 !important;
+        --color-prettylights-syntax-markup-inserted-bg: #dafbe1 !important;
+        --color-prettylights-syntax-markup-changed-text: #953800 !important;
+        --color-prettylights-syntax-markup-changed-bg: #ffd8b5 !important;
+        --color-prettylights-syntax-markup-ignored-text: #eaeef2 !important;
+        --color-prettylights-syntax-markup-ignored-bg: #0550ae !important;
+        --color-prettylights-syntax-meta-diff-range: #8250df !important;
+        --color-prettylights-syntax-brackethighlighter-angle: #57606a !important;
+        --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f !important;
+        --color-prettylights-syntax-constant-other-reference-link: #0a3069 !important;
+        --color-fg-default: #24292f !important;
+        --color-fg-muted: #57606a !important;
+        --color-fg-subtle: #6e7781 !important;
+        --color-canvas-default: #fff !important;
+        --color-canvas-subtle: #f6f8fa !important;
+        --color-border-default: #d0d7de !important;
+        --color-border-muted: #d8dee4 !important;
+        --color-neutral-muted: rgba(175, 184, 193, .2) !important;
+        --color-accent-fg: #0969da !important;
+        --color-accent-emphasis: #0969da !important;
+        --color-attention-subtle: #fff8c5 !important;
+        --color-danger-fg: #cf222e !important
+    }
+
+    ol ul {
+        list-style: disc;
+    }
 }
 
 .markdown-body {
