--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,8 +39,8 @@
         --color-fg-subtle: #6e7781 !important;
         --color-canvas-default: #fff !important;
         --color-canvas-subtle: #f6f8fa !important;
-        --color-border-default: #d0d7de !important;
-        --color-border-muted: #d8dee4 !important;
+        --color-border-default: #ffbe76 !important;
+        --color-border-muted: #fff1c3 !important;
         --color-neutral-muted: rgba(175, 184, 193, .2) !important;
         --color-accent-fg: #0969da !important;
         --color-accent-emphasis: #0969da !important;
